# worf

./: .clang-format  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  README.md.bak  build.rs  main  main.c  timestamp  worf  worf.service
c/: Makefile  main.c  main.h
public/: index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
public/src/: index.js
src/: main.rs
src/ffmpeg_decoder/: mod.rs
src/mpd_library/: ffmpeg_decoder.rs  mod.rs
